fix add button size and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,11 @@ body {
   border: 1px solid #5e5eff;
   border-bottom-right-radius: 0.6rem;
   border-top-right-radius: 0.6rem;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
   cursor: pointer;
   font-weight: bold;
   text-transform: uppercase;
-  top: 0.15rem;
   width: 3.5rem;
 }
 
@@ -48,7 +49,7 @@ body {
 }
 
 #add-plus {
-  font-size: 1.2rem;
+  font-size: 14px;
   left: -0.06rem;
 }
 
